correct references to assets

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
   <head>
     <title>Fiona Tay</title>
-    <link href='/css/bootstrap.css' rel='stylesheet' type='text/css' />
-    <link href='/css/font-awesome.css' rel='stylesheet' type='text/css' />
-    <link href='/css/index.css' rel='stylesheet' type='text/css' />
+    <META NAME="description" CONTENT="I'm a Singaporean web developer living in San Francisco.">
+    <META http-equiv="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+
+    <link href='stylesheets/bootstrap.min.css' rel='stylesheet' type='text/css' />
+    <link href='stylesheets/font-awesome.css' rel='stylesheet' type='text/css' />
+    <link href='stylesheets/index.css' rel='stylesheet' type='text/css' />
   </head>
   <body>
     <div class='container content'>
