--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <h1>
             Fiona Tay
           </h1>
-          <ul>
+          <ul class='contacts'>
             <li>
               <a href='mailto:me@fionatay.com'>
                 <icon class='icon-envelope'></icon>
@@ -48,6 +48,14 @@
   <a href='http://pivotallabs.com'>Pivotal Labs</a>
   in San Francisco.
 </p>
+
+<p>I've given talks at various conferences:
+	<ul>
+		<li><a href="why-jruby.pdf">Why JRuby, LA Ruby Conference, Feb 2013</a></li>
+		<li>Bootstrap your Women in CS group, Grace Hopper Celebration, Oct 2012</li>
+		<li>Getting involved in open source, SoCal Celebration of Women in Computing, April 2012</li>
+		</ul>
+</p>
 <p>
   I earned my B.S. in Computer Science at
   <a href='http://cs.hmc.edu'>Harvey Mudd College,</a>
@@ -58,16 +66,9 @@
 </p>
 <p>
   Because of my experience at Mudd, I'm passionate about getting more women into CS. I recently ran a conference workshop at Grace Hopper 2012 on how to start women in CS activities at your organizations.
-  I also run a support group for students running women in CS activities.
 </p>
 <p>
-  Lately I've been contributing to
-  <a href='http://stolenbicycleregistry.com'>a registry for stolen bikes</a>
-  and
-  <a href='http://theiqcollective.com'>an educational nonprofit.</a>
-  In the past I've also contributed to
-  <a href='http://halloween-helper.herokuapp.com'>halloween helper, a satire of Halloween sexualization.</a>
-  I also like to crochet, bike and play soccer.
+  In my free time, I like to crochet, bike, and watch prime-time TV.
 </p>
 <p>
   Check out my work on
