--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class='container content'>
       <div class='row'>
         <div class='span3'>
+			<img src="https://secure.gravatar.com/avatar/e20fc22ed6d97b618e584b176ad98e20?s=150" class='thumbnail'>
           <h1>
             Fiona Tay
           </h1>
