add slideshare link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <p>I've given talks at various conferences:
 	<ul>
-		<li><a href="why-jruby.pdf">Why JRuby, LA Ruby Conference, Feb 2013</a></li>
+		<li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a></li>
 		<li>Bootstrap your Women in CS group, Grace Hopper Celebration, Oct 2012</li>
 		<li>Getting involved in open source, SoCal Celebration of Women in Computing, April 2012</li>
 		</ul>
