--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
         </div>
         <div class='span9'>
           <p>
-  I'm currently a Rails developer at
+  I'm currently an <a href='http://en.wikipedia.org/wiki/Extreme_programming'>extreme programmer</a> at
   <a href='http://pivotallabs.com'>Pivotal Labs</a>
   in San Francisco.
 </p>
 
-<p>I've given talks at various conferences:
+<p>I recently started speaking at conferences - here are some topics I've spoken on:
 	<ul>
 		<li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a></li>
+		<li><a href='http://www.youtube.com/watch?v=0JEFTu0WXtk'>Building Suggestotron in Backbone, Women Who Code Lightning Talks, Jan 2013</a></li>
 		<li>Bootstrap your Women in CS group, Grace Hopper Celebration, Oct 2012</li>
 		<li>Getting involved in open source, SoCal Celebration of Women in Computing, April 2012</li>
 		</ul>
