Update job description

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
         </div>
         <div class='span9'>
           <p>
-  I'm currently an <a href='http://en.wikipedia.org/wiki/Extreme_programming'>extreme programmer</a> at
-  <a href='http://pivotallabs.com'>Pivotal Labs</a>
-  in San Francisco.
+  I work on User Acquisition as part of the Growth team at Airbnb. Prior to that I was a web development consultant at Pivotal Labs.
 </p>
 
 <p>I recently started speaking at conferences - here are some topics I've spoken on:
