Add more content and reformat HTML

--- a/index.html
+++ b/index.html
@@ -1,81 +1,84 @@
 <html>
-  <head>
-    <title>Fiona Tay</title>
-    <META NAME="description" CONTENT="I'm a Singaporean web developer living in San Francisco.">
-    <META http-equiv="Content-Type" CONTENT="text/html; charset=iso-8859-1">
+<head>
+  <title>Fiona Tay</title>
+  <META NAME="description" CONTENT="Airbnb developer passionate about UX, testing, and travel.">
+  <META http-equiv="Content-Type" CONTENT="text/html; charset=iso-8859-1">
 
-    <link href='stylesheets/bootstrap.min.css' rel='stylesheet' type='text/css' />
-    <link href='stylesheets/font-awesome.css' rel='stylesheet' type='text/css' />
-    <link href='stylesheets/index.css' rel='stylesheet' type='text/css' />
-  </head>
-  <body>
-    <div class='container content'>
-      <div class='row'>
-        <div class='span3'>
-			<img src="https://secure.gravatar.com/avatar/e20fc22ed6d97b618e584b176ad98e20?s=150" class='thumbnail'>
-          <h1>
-            Fiona Tay
-          </h1>
-          <ul class='contacts'>
-            <li>
-              <a href='mailto:me@fionatay.com'>
-                <icon class='icon-envelope'></icon>
-                me@fionatay.com
-              </a>
-            </li>
-            <li>
-              <a href='http://twitter.com/msfionatay'>
-                <icon class='icon-twitter'></icon>
-                msfionatay
-              </a>
-            </li>
-            <li>
-              <a href='http://github.com/fionatay'>
-                <icon class='icon-github'></icon>
-                fionatay
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class='span9'>
-          <p>
-  I work on User Acquisition as part of the Growth team at Airbnb. Prior to that I was a web development consultant at Pivotal Labs.
-</p>
+  <link href='stylesheets/bootstrap.min.css' rel='stylesheet' type='text/css'/>
+  <link href='stylesheets/font-awesome.css' rel='stylesheet' type='text/css'/>
+  <link href='stylesheets/index.css' rel='stylesheet' type='text/css'/>
+</head>
+<body>
+<div class='container content'>
+  <div class='row'>
+    <div class='span3'>
+      <img src="https://secure.gravatar.com/avatar/e20fc22ed6d97b618e584b176ad98e20?s=150" class='thumbnail'>
 
-<p>I recently started speaking at conferences - here are some topics I've spoken on:
-	<ul>
-		<li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a></li>
-		<li><a href='http://www.youtube.com/watch?v=0JEFTu0WXtk'>Building Suggestotron in Backbone, Women Who Code Lightning Talks, Jan 2013</a></li>
-		<li>Bootstrap your Women in CS group, Grace Hopper Celebration, Oct 2012</li>
-		<li>Getting involved in open source, SoCal Celebration of Women in Computing, April 2012</li>
-		</ul>
-</p>
-<p>
-  I earned my B.S. in Computer Science at
-  <a href='http://cs.hmc.edu'>Harvey Mudd College,</a>
-  where I became a CS major because of the
-  <a href='http://www.nytimes.com/2012/04/03/science/giving-women-the-access-code.html'>
-    department's initiatives to make CS more welcoming.
-  </a>
-</p>
-<p>
-  Because of my experience at Mudd, I'm passionate about getting more women into CS. I recently ran a conference workshop at Grace Hopper 2012 on how to start women in CS activities at your organizations.
-</p>
-<p>
-  In my free time, I like to crochet, bike, and watch prime-time TV.
-</p>
-<p>
-  Check out my work on
-  <a href='http://github.com/fionatay'>
-    Github
-  </a>
-  or follow me on
-  <a href='http://twitter.com/msfionatay'>
-    Twitter.
-  </a>
-</p>
-        </div>
-      </div>
+      <h1>
+        Fiona Tay
+      </h1>
+      <ul class='contacts'>
+        <li>
+          <a href='mailto:fiona@tay.io'>
+            <icon class='icon-envelope'></icon>
+            fiona@tay.io
+          </a>
+        </li>
+        <li>
+          <a href='http://twitter.com/msfionatay'>
+            <icon class='icon-twitter'></icon>
+            msfionatay
+          </a>
+        </li>
+        <li>
+          <a href='http://github.com/fionatay'>
+            <icon class='icon-github'></icon>
+            fionatay
+          </a>
+        </li>
+      </ul>
     </div>
-  </body>
+    <div class='span9'>
+      <p>
+        I'm an engineer working on User Acquisition at <a href="http://airbnb.com">Airbnb</a>. Prior to that, I was a web development
+        consultant at Pivotal Labs. I primarily work in Ruby on Rails and have been using it since 2010.
+      </p>
+
+      <p>I recently started speaking at conferences - here are some topics I've spoken on:
+      <ul>
+        <li>Services from Monorail, Madison Ruby Conference, August 2013</li>
+        <li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a>
+        </li>
+        <li><a href='http://www.youtube.com/watch?v=0JEFTu0WXtk'>Building Suggestotron in Backbone, Women Who Code
+          Lightning Talks, Jan 2013</a></li>
+        <li>Bootstrap your Women in CS group, Grace Hopper Celebration, Oct 2012</li>
+        <li>Getting involved in open source, SoCal Celebration of Women in Computing, April 2012</li>
+      </ul>
+      <p>
+        I earned my B.S. in Computer Science at
+        <a href='http://cs.hmc.edu'>Harvey Mudd College,</a>
+        where I became a CS major because of the
+        <a href='http://www.nytimes.com/2012/04/03/science/giving-women-the-access-code.html'>
+          department's initiatives to make CS more welcoming.
+        </a>
+      </p>
+
+      <p>
+        Because of my experience at Mudd, I'm passionate about getting more women into CS.
+        I've mentored two women learning to code through <a href="http://hackbright.org">Hackbright Academy</a>.
+        I recently ran a workshop at Grace Hopper 2012 on how to start women in CS activities at your organizations.
+      </p>
+
+      <p>
+        In my free time, I like to crochet, bike, and watch prime-time TV.
+      </p>
+
+      <p>
+        Check out my work on <a href='http://github.com/fionatay'>Github</a>
+        or follow me on <a href='http://twitter.com/msfionatay'>Twitter.</a>
+      </p>
+    </div>
+  </div>
+</div>
+</body>
 </html>
