Update job title

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
     </div>
     <div class='span9'>
       <p>
-        I'm an engineer working on User Acquisition at <a href="http://airbnb.com">Airbnb</a>. Prior to that, I was a web development
-        consultant at Pivotal Labs. I primarily work in Ruby on Rails and have been using it since 2010.
+        I'm an software engineer on the web core team at <a href="http://airbnb.com">Airbnb</a>. I love working on web applications and consider myself a full-stack engineer. I primarily work in Ruby on Rails and have been using it since 2010.
       </p>
 
-      <p>I recently started speaking at conferences - here are some topics I've spoken on:
+      <p>I speak at conferences from time to time - here's a select list of my talks. While I've slowed down a bit, I'm looking to get back into it (and am open to invitations).
       <ul>
         <li>Services from Monorail, Madison Ruby Conference, August 2013</li>
         <li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a>
@@ -55,9 +54,9 @@
         <li>Getting involved in open source, SoCal Celebration of Women in Computing, April 2012</li>
       </ul>
       <p>
-        I earned my B.S. in Computer Science at
+        I studied Computer Science at
         <a href='http://cs.hmc.edu'>Harvey Mudd College,</a>
-        where I became a CS major because of the
+        where I got into programming because of the
         <a href='http://www.nytimes.com/2012/04/03/science/giving-women-the-access-code.html'>
           department's initiatives to make CS more welcoming.
         </a>
@@ -65,12 +64,13 @@
 
       <p>
         Because of my experience at Mudd, I'm passionate about getting more women into CS.
-        I've mentored two women learning to code through <a href="http://hackbright.org">Hackbright Academy</a>.
-        I recently ran a workshop at Grace Hopper 2012 on how to start women in CS activities at your organizations.
+        I've been mentoring women learning to code through <a href="http://hackbright.org">Hackbright Academy</a>, since Spring 2013.
+        I'm interested in diversity efforts - especially at the college level and below.
+        I recently ran a workshop at the 2012 Grace Hopper Conference on how to start women in CS activities at your organizations.
       </p>
 
       <p>
-        In my free time, I like to crochet, bike, and watch prime-time TV.
+        In my free time, I like to visit bookstores, ride my bike(s), and watch prime-time TV.
       </p>
 
       <p>
