Update Github username

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </a>
         </li>
         <li>
-          <a href='http://github.com/fionatay'>
+          <a href='http://github.com/tay'>
             <icon class='icon-github'></icon>
-            fionatay
+            tay
           </a>
         </li>
       </ul>
@@ -74,7 +74,7 @@
       </p>
 
       <p>
-        Check out my work on <a href='http://github.com/fionatay'>Github</a>
+        Check out my work on <a href='http://github.com/tay'>Github</a>
         or follow me on <a href='http://twitter.com/msfionatay'>Twitter.</a>
       </p>
     </div>
