Update team name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class='span9'>
       <p>
-        I'm an software engineer on the web core team at <a href="http://airbnb.com">Airbnb</a>. I love working on web applications and consider myself a full-stack engineer. I primarily work in Ruby on Rails and have been using it since 2010.
+        I'm an software engineer on the Core Web team at <a href="https://www.airbnb.com">Airbnb</a>. I love working on web applications and consider myself a full-stack engineer. I primarily work in Ruby on Rails and have been using it since 2010.
       </p>
 
       <p>I speak at conferences from time to time - here's a select list of my talks. While I've slowed down a bit, I'm looking to get back into it (and am open to invitations).
