--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 
       <p>I speak at conferences from time to time - here"s a select list of my talks. While I"ve slowed down a bit, I"m looking to get back into it (and am open to invitations).
       <ul>
+      <li><a href='https://speakerdeck.com/fionatay/inside-the-airbnb-brand-evolution'>Inside the Airbnb Brand Evolution</a>, CSSConf Asia, Nov 2014</li>
         <li>Services from Monorail, Madison Ruby Conference, August 2013</li>
         <li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a>
         </li>
