--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
 
       <p>I speak at conferences from time to time - here"s a select list of my talks. While I"ve slowed down a bit, I"m looking to get back into it (and am open to invitations).
       <ul>
-      <li><a href='https://speakerdeck.com/fionatay/inside-the-airbnb-brand-evolution'>Inside the Airbnb Brand Evolution</a>, CSSConf Asia, Nov 2014</li>
+      <li><a href='https://speakerdeck.com/fionatay/inside-the-airbnb-brand-evolution'>Inside the Airbnb Brand Evolution, CSSConf Asia, Nov 2014</a></li>
         <li>Services from Monorail, Madison Ruby Conference, August 2013</li>
         <li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a>
         </li>
-        <li><a href="http://www.youtube.com/watch?v=0JEFTu0WXtk">Building Suggestotron in Backbone, Women Who Code
-          Lightning Talks, Jan 2013</a></li>
-        <li>Bootstrap your Women in CS group, Grace Hopper Celebration, Oct 2012</li>
-        <li>Getting involved in open source, SoCal Celebration of Women in Computing, April 2012</li>
+        <li>Bootstrap Your Women in CS Group, Grace Hopper Celebration, Oct 2012</li>
+        <li>Getting Involved in Open Source, SoCal Celebration of Women in Computing, April 2012</li>
       </ul>
       <p>
         I studied Computer Science at
