Turn away recruiters

--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
       </h1>
       <ul class="contacts">
         <li>
-          <a href="mailto:fiona@tay.io">
-            <icon class="icon-envelope"></icon>
-            fiona@tay.io
-          </a>
+          <icon class="icon-envelope"></icon>
+          fiona@tay.io (no recruiters!)
         </li>
         <li>
           <a href="http://twitter.com/msfionatay">
