Add new content

--- a/index.html
+++ b/index.html
@@ -37,11 +37,17 @@
       </ul>
     </div>
     <div class="span9">
-      <p>
-        I'm an software engineer on the Core Web team at <a href="https://www.airbnb.com">Airbnb</a>. I love working on web applications and consider myself a full-stack engineer. I primarily work in Ruby on Rails and have been using it since 2010.
+      <p class="alert">
+        Follow me on <a href="http://twitter.com/msfionatay">Twitter!</a>
       </p>
+      
+      <p>
+        I'm an software engineer at <a href="https://www.airbnb.com">Airbnb</a>. I love working on web applications and consider myself a full-stack engineer. I primarily work in Ruby on Rails and have been using it since 2010. In my free time, I like to visit bookstores, ride my bike(s), and watch prime-time TV. 
+      </p>
+      
 
-      <p>I speak at conferences from time to time - here"s a select list of my talks. While I"ve slowed down a bit, I"m looking to get back into it (and am open to invitations).
+      <h3>Professional Interests & Conference Speaking</h3>
+      <p>I speak at conferences from time to time - here's a select list of my talks. While I've slowed down a bit, I'm looking to get back into it (and am open to invitations). I will only speak at events with a Code of Conduct.
       <ul>
       <li><a href='https://speakerdeck.com/fionatay/inside-the-airbnb-brand-evolution'>Inside the Airbnb Brand Evolution, CSSConf Asia, Nov 2014</a></li>
         <li>Services from Monorail, Madison Ruby Conference, August 2013</li>
@@ -50,6 +56,8 @@
         <li>Bootstrap Your Women in CS Group, Grace Hopper Celebration, Oct 2012</li>
         <li>Getting Involved in Open Source, SoCal Celebration of Women in Computing, April 2012</li>
       </ul>
+
+      <h3>Diversity & Inclusion Advocacy</h3>
       <p>
         I studied Computer Science at
         <a href="http://cs.hmc.edu">Harvey Mudd College,</a>
@@ -60,19 +68,20 @@
       </p>
 
       <p>
-        Because of my experience at Mudd, I"m passionate about getting more women into CS.
-        I"ve been mentoring women learning to code through <a href="http://hackbright.org">Hackbright Academy</a>, since Spring 2013.
-        I"m interested in diversity efforts - especially at the college level and below.
-        I recently ran a workshop at the 2012 Grace Hopper Conference on how to start women in CS activities at your organizations.
-      </p>
+        I'm committed to making the tech industry more inclusive. Some of my favorite organizations are <a href="https://www.code2040.org">CODE2040</a> and <a href="http://www.writespeakcode.com">Write/Speak/Code</a>. I've also worked with <a href="http://hackbright.org">Hackbright Academy</a> and <a href="https://www.womenwhocode.com">Women Who Code</a>.
 
-      <p>
-        In my free time, I like to visit bookstores, ride my bike(s), and watch prime-time TV.
-      </p>
-
-      <p>
-        Check out my work on <a href="http://github.com/tay">Github</a>
-        or follow me on <a href="http://twitter.com/msfionatay">Twitter.</a>
+        Some of my materials:
+        <ul>
+          <li>
+            I ran a workshop at Grace Hopper in 2012 on starting a women-in-CS group at colleges. <a href="https://www.cs.hmc.edu/~mfoo/WICSProposal.pdf">Proposal here</a>
+          </li>
+          <li>I started #DisruptTechInterviews, a movement to revolutionize how we interview software engineers. <a href="https://storify.com/kthomas901/disrupttechinterviews">Read the Storify here</a>
+          </li>
+          <li>I've written about intersectionality and inclusion on the topic of #RealDiversityNumbers, the philosophy that diversity goes beyond % of women. <a href="https://storify.com/EricaJoy/realdiversitynumbers">See Storify here</a>
+          </li>
+          <li>I think it's important for us to pay everyone fairly (per #talkpay) and <a href="http://www.theguardian.com/us-news/2015/may/02/talkpay-income-inequality-twitter-gender-pay-gap">was interviewed by Susie Cagle for the Guardian and <a href="http://www.theverge.com/2015/5/1/8530189/talk-pay-international-workers-day-salaries">was featured in The Verge</a>.
+          </li>
+          </ul>
       </p>
     </div>
   </div>
