Fix broken link & plug Medium

--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
         </li>
         <li>
           <a href="http://twitter.com/msfionatay">
-            <icon class="icon-twitter"></icon>
-            msfionatay
+            <icon class="icon-twitter"></icon>msfionatay
           </a>
         </li>
         <li>
-          <a href="http://github.com/tay">
-            <icon class="icon-github"></icon>
-            tay
+          <a href="https://medium.com/@msfionatay">
+            @msfionatay on Medium
           </a>
         </li>
       </ul>
@@ -77,7 +75,7 @@
           </li>
           <li>I've written about intersectionality and inclusion on the topic of #RealDiversityNumbers, the philosophy that diversity goes beyond % of women. <a href="https://storify.com/EricaJoy/realdiversitynumbers">See Storify here</a>
           </li>
-          <li>I think it's important for us to pay everyone fairly (per #talkpay) and <a href="http://www.theguardian.com/us-news/2015/may/02/talkpay-income-inequality-twitter-gender-pay-gap">was interviewed by Susie Cagle for the Guardian and <a href="http://www.theverge.com/2015/5/1/8530189/talk-pay-international-workers-day-salaries">was featured in The Verge</a>.
+          <li>I think it's important for us to pay everyone fairly (per #talkpay) and <a href="http://www.theguardian.com/us-news/2015/may/02/talkpay-income-inequality-twitter-gender-pay-gap">was interviewed by Susie Cagle for the Guardian</a> and <a href="http://www.theverge.com/2015/5/1/8530189/talk-pay-international-workers-day-salaries">was featured in The Verge</a>.
           </li>
           </ul>
       </p>
