Update list of speaking engagements

--- a/index.html
+++ b/index.html
@@ -45,12 +45,19 @@
       
 
       <h3>Professional Interests & Conference Speaking</h3>
-      <p>I speak at conferences from time to time - here's a select list of my talks. While I've slowed down a bit, I'm looking to get back into it (and am open to invitations). I will only speak at events with a Code of Conduct.
-      <ul>
+      <p>I speak at conferences from time to time - here's a select list of my talks. While I've slowed down a bit, I'm looking to get back into it (and am open to invitations).
+
+<h4>Technical topics</h4>
+<ul>
       <li><a href='https://speakerdeck.com/fionatay/inside-the-airbnb-brand-evolution'>Inside the Airbnb Brand Evolution, CSSConf Asia, Nov 2014</a></li>
         <li>Services from Monorail, Madison Ruby Conference, August 2013</li>
         <li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a>
         </li>
+</ul>
+
+<h4>Career growth/diversity in tech</h4>
+<ul>
+<li>From College to Airbnb: Hypergrowth, Women Who Code CONNECT, Mar 2015</li>
         <li>Bootstrap Your Women in CS Group, Grace Hopper Celebration, Oct 2012</li>
         <li>Getting Involved in Open Source, SoCal Celebration of Women in Computing, April 2012</li>
       </ul>
