--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </p>
 
       <p>
-        I'm committed to making the tech industry more inclusive. Some of my favorite organizations are <a href="https://www.code2040.org">CODE2040</a> and <a href="http://www.writespeakcode.com">Write/Speak/Code</a>. I've also worked with <a href="https://hackbrightacademy.com">Hackbright Academy</a> and <a href="https://www.womenwhocode.com">Women Who Code</a>.
+        I'm committed to making the tech industry more inclusive. Some of my favorite organizations are <a href="https://www.code2040.org">CODE2040</a> and <a href="http://www.writespeakcode.com">Write/Speak/Code</a>. I've also worked with <a href="https://www.womenwhocode.com">Women Who Code</a>.
 
         Some of my materials:
         <ul>
