Update conference speaking

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 <h4>Technical topics</h4>
 <ul>
+      <li>Python Data Tools, <a href="https://pycon.sg">PyCon Singapore</a>, Jun 2016</li>
       <li><a href='https://speakerdeck.com/fionatay/inside-the-airbnb-brand-evolution'>Inside the Airbnb Brand Evolution, CSSConf Asia, Nov 2014</a></li>
         <li>Services from Monorail, Madison Ruby Conference, August 2013</li>
         <li><a href="http://www.slideshare.net/FionaTay2/why-jruby-16743985">Why JRuby, LA Ruby Conference, Feb 2013</a>
@@ -57,7 +58,7 @@
 
 <h4>Career growth/diversity in tech</h4>
 <ul>
-<li>From College to Airbnb: Hypergrowth, Women Who Code CONNECT, Mar 2015</li>
+<li>From College to Airbnb: Hypergrowth, Women Who Code CONNECT, Mar 2016</li>
         <li>Bootstrap Your Women in CS Group, Grace Hopper Celebration, Oct 2012</li>
         <li>Getting Involved in Open Source, SoCal Celebration of Women in Computing, April 2012</li>
       </ul>
