Remove "no recruiters" verbiage
I decided it was gauche

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <ul class="contacts">
         <li>
           <icon class="icon-envelope"></icon>
-          fiona@tay.io (no recruiters!)
+          fiona@tay.io
         </li>
         <li>
           <a href="http://twitter.com/msfionatay">
