Update ableist language

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
           <li>
             I ran a workshop at Grace Hopper in 2012 on starting a women-in-CS group at colleges. <a href="https://www.cs.hmc.edu/~mfoo/WICSProposal.pdf">Proposal here</a>
           </li>
-          <li>I started #DisruptTechInterviews, a movement to revolutionize how we interview software engineers. <a href="https://storify.com/kthomas901/disrupttechinterviews">Read the Storify here</a>
+          <li>I started #DisruptTechInterviews, a hashtag about how we need to revolutionize the interview process for software engineers. <a href="https://storify.com/kthomas901/disrupttechinterviews">Read the Storify here</a>
           </li>
-          <li>I've written about intersectionality and inclusion on the topic of #RealDiversityNumbers, the philosophy that diversity goes beyond % of women. <a href="https://storify.com/EricaJoy/realdiversitynumbers">See Storify here</a>
+          <li>I've written about intersectionality and inclusion on the topic of #RealDiversityNumbers, the philosophy that diversity goes beyond % of women. <a href="https://storify.com/EricaJoy/realdiversitynumbers">Read the Storify</a>
           </li>
           <li>I think it's important for us to pay everyone fairly (per #talkpay) and <a href="http://www.theguardian.com/us-news/2015/may/02/talkpay-income-inequality-twitter-gender-pay-gap">was interviewed by Susie Cagle for the Guardian</a> and <a href="http://www.theverge.com/2015/5/1/8530189/talk-pay-international-workers-day-salaries">was featured in The Verge</a>.
           </li>
