Update my Medium handle

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           </a>
         </li>
         <li>
-          <a href="https://medium.com/@msfionatay">
-            @msfionatay on Medium
+          <a href="https://medium.com/@tay">
+            @tay on Medium
           </a>
         </li>
       </ul>
